--- a/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
+++ b/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xLU-wP-fxD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xLU-wP-fxD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13137.5"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -32,7 +32,7 @@
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImportCell" id="gQz-sd-Vn2" customClass="CustomImportCell" customModule="ColorNumber" customModuleProvider="target">
                                         <rect key="frame" x="88" y="0.0" width="199" height="136"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="199" height="136"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
@@ -123,25 +123,25 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="button_01" translatesAutoresizingMaskIntoConstraints="NO" id="CM9-gO-ji3">
                                 <rect key="frame" x="0.0" y="569.5" width="375" height="47.5"/>
                             </imageView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="evd-8h-QUp">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="evd-8h-QUp">
                                 <rect key="frame" x="0.0" y="569.5" width="375" height="47.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mM0-pM-cir">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="5" id="mM0-pM-cir">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NumberColorCell" id="pW5-rS-vcO" customClass="NumberColorCell" customModule="ColorNumber" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NumberColorCell" id="pW5-rS-vcO" customClass="NumberColorCell" customModule="ColorNumber" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="-1.5" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QTg-na-2Nd">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_paintbucket" translatesAutoresizingMaskIntoConstraints="NO" id="QTg-na-2Nd">
+                                                    <rect key="frame" x="10" y="5" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="QTg-na-2Nd" secondAttribute="height" id="iZq-UA-as7"/>
                                                     </constraints>
@@ -161,9 +161,9 @@
                                         </view>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="QTg-na-2Nd" firstAttribute="leading" secondItem="pW5-rS-vcO" secondAttribute="leading" id="13d-hM-Vco"/>
-                                            <constraint firstItem="QTg-na-2Nd" firstAttribute="top" secondItem="pW5-rS-vcO" secondAttribute="top" id="Egh-gI-8a7"/>
-                                            <constraint firstAttribute="bottom" secondItem="QTg-na-2Nd" secondAttribute="bottom" id="RsI-Po-xf2"/>
+                                            <constraint firstItem="QTg-na-2Nd" firstAttribute="centerY" secondItem="pW5-rS-vcO" secondAttribute="centerY" id="0vt-xj-gCl"/>
+                                            <constraint firstAttribute="trailing" secondItem="QTg-na-2Nd" secondAttribute="trailing" id="LEV-8K-fPy"/>
+                                            <constraint firstAttribute="bottom" secondItem="QTg-na-2Nd" secondAttribute="bottom" constant="5" id="kqK-0S-uBD"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="imageView" destination="QTg-na-2Nd" id="fii-88-b7X"/>
@@ -175,15 +175,44 @@
                                     <outlet property="delegate" destination="Nxc-eQ-vV8" id="zqr-05-7yt"/>
                                 </connections>
                             </collectionView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="38y-pP-2LF">
+                                <rect key="frame" x="0.0" y="80.5" width="375" height="489"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1OU-Cv-tWl">
+                                <rect key="frame" x="0.0" y="20" width="375" height="60.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MKs-6X-6RA">
+                                        <rect key="frame" x="10" y="0.0" width="60.5" height="60.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="MKs-6X-6RA" secondAttribute="height" id="Mor-n6-77k"/>
+                                        </constraints>
+                                        <state key="normal" image="ic_back"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="MKs-6X-6RA" firstAttribute="top" secondItem="1OU-Cv-tWl" secondAttribute="top" id="KKt-em-apL"/>
+                                    <constraint firstAttribute="bottom" secondItem="MKs-6X-6RA" secondAttribute="bottom" id="XTl-43-99y"/>
+                                    <constraint firstItem="MKs-6X-6RA" firstAttribute="leading" secondItem="1OU-Cv-tWl" secondAttribute="leading" constant="10" id="xKg-0s-cWw"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.91755962369999999" green="0.91771018510000002" blue="0.91752761599999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="qyl-RE-8ry" firstAttribute="trailing" secondItem="evd-8h-QUp" secondAttribute="trailing" id="1Wl-L0-tiD"/>
                             <constraint firstItem="evd-8h-QUp" firstAttribute="leading" secondItem="CM9-gO-ji3" secondAttribute="leading" id="Ag5-9k-wGa"/>
                             <constraint firstItem="evd-8h-QUp" firstAttribute="bottom" secondItem="CM9-gO-ji3" secondAttribute="bottom" id="Da7-ce-Vzo"/>
                             <constraint firstItem="evd-8h-QUp" firstAttribute="height" secondItem="Hq9-v5-Kjj" secondAttribute="height" multiplier="1/14" id="F1U-UC-tta"/>
                             <constraint firstItem="evd-8h-QUp" firstAttribute="leading" secondItem="qyl-RE-8ry" secondAttribute="leading" id="FbF-x7-ARj"/>
+                            <constraint firstItem="qyl-RE-8ry" firstAttribute="trailing" secondItem="38y-pP-2LF" secondAttribute="trailing" id="FzG-XP-Zcg"/>
+                            <constraint firstItem="38y-pP-2LF" firstAttribute="leading" secondItem="qyl-RE-8ry" secondAttribute="leading" id="I7s-kf-We3"/>
+                            <constraint firstItem="38y-pP-2LF" firstAttribute="top" secondItem="1OU-Cv-tWl" secondAttribute="bottom" id="McR-vK-XTW"/>
+                            <constraint firstItem="1OU-Cv-tWl" firstAttribute="leading" secondItem="qyl-RE-8ry" secondAttribute="leading" id="Q7I-dv-gVd"/>
+                            <constraint firstItem="1OU-Cv-tWl" firstAttribute="top" secondItem="Hq9-v5-Kjj" secondAttribute="top" constant="20" id="Ts2-rk-VQV"/>
                             <constraint firstItem="qyl-RE-8ry" firstAttribute="bottom" secondItem="evd-8h-QUp" secondAttribute="bottom" constant="50" id="Upd-FY-fKK"/>
+                            <constraint firstItem="1OU-Cv-tWl" firstAttribute="height" secondItem="Hq9-v5-Kjj" secondAttribute="height" multiplier="1/11" id="Y6F-2k-cwj"/>
+                            <constraint firstItem="qyl-RE-8ry" firstAttribute="trailing" secondItem="1OU-Cv-tWl" secondAttribute="trailing" id="YsO-QS-yGn"/>
+                            <constraint firstItem="CM9-gO-ji3" firstAttribute="top" secondItem="38y-pP-2LF" secondAttribute="bottom" id="bRb-8r-Yd7"/>
                             <constraint firstItem="evd-8h-QUp" firstAttribute="height" secondItem="CM9-gO-ji3" secondAttribute="height" id="lUl-n2-mXV"/>
                             <constraint firstItem="evd-8h-QUp" firstAttribute="trailing" secondItem="CM9-gO-ji3" secondAttribute="trailing" id="uzy-x0-Bbl"/>
                         </constraints>
@@ -408,7 +437,7 @@
         <scene sceneID="WuR-ip-eCO">
             <objects>
                 <tabBarController id="xLU-wP-fxD" customClass="CustomTabbarController" customModule="ColorNumber" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backgroundImage="ic_libary" id="BEk-J2-W0t">
+                    <tabBar key="tabBar" contentMode="scaleToFill" backgroundImage="ic_libary" id="BEk-J2-W0t">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -455,10 +484,12 @@
         <image name="bt_addthree" width="52" height="39"/>
         <image name="bt_watchvideo" width="166" height="35"/>
         <image name="button_01" width="414" height="63"/>
+        <image name="ic_back" width="14" height="25"/>
         <image name="ic_importdark" width="30" height="27"/>
         <image name="ic_libary" width="414" height="48"/>
         <image name="ic_libarydark" width="27" height="27"/>
         <image name="ic_mygallarydark" width="27" height="27"/>
+        <image name="ic_paintbucket" width="43" height="39"/>
         <image name="ic_trending" width="27" height="27"/>
     </resources>
 </document>
