--- a/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
+++ b/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
@@ -280,6 +280,21 @@
             </objects>
             <point key="canvasLocation" x="-242" y="1074"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="7El-nE-aGn">
+            <objects>
+                <viewController id="8P3-T0-oZW" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2RO-8g-OCN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="OVE-b3-69x"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aWn-hY-oKL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="910" y="508"/>
+        </scene>
     </scenes>
     <resources>
         <image name="0_start_screen" width="414" height="736"/>
